feat(device) added test brand HTC model: U12 Plus (2Q55300) feat(device) detect brand Xiaolajiao model: L7620DE feat(device) detect brand Vivo model: X60 (V2059A) feat(device) detect brand OPPO models: Reno 6 Pro (PEPM00), Reno 6 Pro Plus (PENM00)
feat(device) added test brand Konka model: 418

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -99,7 +99,7 @@ HTC:
       model: 'U Play'
     - regex: '(?:U11 plus|(?:HTC_)?2Q4D100)(?:[);/ ]|$)'
       model: 'U11 Plus'
-    - regex: 'HTC (?:U12\+|2Q55100)(?:[);/ ]|$)'
+    - regex: 'HTC (?:U12\+|2Q55[13]00)(?:[);/ ]|$)'
       model: 'U12 Plus'
     - regex: 'U(1[12]) life(?:[);/ ]|$)'
       model: 'U$1 Life'
@@ -3181,7 +3181,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V206[156]|V205[08]|V2043_21|I1928|V2069|V21[12]1A)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/|NOA )vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[479]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|I2012|V206[156]|V205[08]|V2043_21|I1928|V2069|V21[12]1A)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3348,7 +3348,7 @@ Vivo:
       model: 'X50 Pro'
     - regex: '(?:V2011A|X50 Pro\+)(?:[);/ ]|$)'
       model: 'X50 Pro Plus'
-    - regex: 'V2046A(?:[);/ ]|$)'
+    - regex: 'V20(?:46|59)A(?:[);/ ]|$)'
       model: 'X60'
     - regex: '(?:V2047A|V2046)(?:[);/ ]|$)'
       model: 'X60 Pro'
@@ -13030,7 +13030,7 @@ Realme:
 
 # Oppo (oppo.com)
 OPPO:
-  regex: '(?:OB-)?OPPO[ _]?([a-z0-9]+)|N1T|R8001|A101OP|OPG01|A00[12]OP|(?:OPG02|X90[07][0679]|U70[57]T?|X909T?|R(?:10[01]1|2001|201[07]|6007|7005|7007|80[13579]|81[13579]|82[01379]|83[013]|800[067]|8015|810[679]|811[13]|820[057])[KLSTW]?|N520[79]|N5117|A33[wf]|A33fw|A37fw?|PAAM00|PAAT00|PAC[TM]00|R7kf|R7plusf|R7Plusm|A1601|CPH[0-9]{4}|CPH19(69|79|23|1[179])|PB(A[TM]00|CT10|BT30|CM[13]0|[FD]M00)|P(E[RFHG]M\d{2}|E[GH]T\d{2}|DAM10|ADM00|AF[TM]00|ADT00|AHM00|BBM[03]0|BBT00|BDT00|BFT00|[CB]E[MT]00|CA[MT]00|C[CDG]M00|CA[MT]10|[CD]PM00|CRM00|CDT00|CD[TM]10|CHM[013]0|CKM[08]0|CLM[15]0|DEM[13]0|DHM00|D[RK][TM]00|DPT00|DB[TM]00|DCM00|[CD]NM00|DVM00|DY[TM][12]0|DNT00|EA[TM]00|CRT01|EDM00)|PEG[MT]10|PEM[MT][02]0|PDET10|PDS[TM]00|PEC[MT]30|PE[EX]M00|OPG03|PE[QY]M00)(?:[);/ ]|$)'
+  regex: '(?:OB-)?OPPO[ _]?([a-z0-9]+)|N1T|R8001|A101OP|OPG01|A00[12]OP|(?:OPG02|X90[07][0679]|U70[57]T?|X909T?|R(?:10[01]1|2001|201[07]|6007|7005|7007|80[13579]|81[13579]|82[01379]|83[013]|800[067]|8015|810[679]|811[13]|820[057])[KLSTW]?|N520[79]|N5117|A33[wf]|A33fw|A37fw?|PAAM00|PAAT00|PAC[TM]00|R7kf|R7plusf|R7Plusm|A1601|CPH[0-9]{4}|CPH19(69|79|23|1[179])|PB(A[TM]00|CT10|BT30|CM[13]0|[FD]M00)|P(E[RFHG]M\d{2}|E[GH]T\d{2}|DAM10|ADM00|AF[TM]00|ADT00|AHM00|BBM[03]0|BBT00|BDT00|BFT00|[CB]E[MT]00|CA[MT]00|C[CDG]M00|CA[MT]10|[CD]PM00|CRM00|CDT00|CD[TM]10|CHM[013]0|CKM[08]0|CLM[15]0|DEM[13]0|DHM00|D[RK][TM]00|DPT00|DB[TM]00|DCM00|[CD]NM00|DVM00|DY[TM][12]0|DNT00|EA[TM]00|CRT01|EDM00)|PEG[MT]10|PEM[MT][02]0|PDET10|PDS[TM]00|PEC[MT]30|OPG03|PE[QYPEXN]M00)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'PCHM10(?:[);/ ]|$)'
@@ -13337,6 +13337,10 @@ OPPO:
       model: 'Reno 5G'
     - regex: '(?:CPH2235|PEQM00)(?:[);/ ]|$)'
       model: 'Reno 6'
+    - regex: 'PEPM00(?:[);/ ]|$)'
+      model: 'Reno 6 Pro'
+    - regex: 'PENM00(?:[);/ ]|$)'
+      model: 'Reno 6 Pro Plus'
     - regex: '(?:PEYM00)(?:[);/ ]|$)'
       model: 'K9 Pro 5G'
     - regex: 'PCLM10(?:[);/ ]|$)'
@@ -20450,14 +20454,14 @@ X-TIGI:
 
 # Xiaolajiao or Shenzhen Peppers (xiaolajiao.com)
 Xiaolajiao:
-  regex: '(LA2-(?:L|S[N]?)|HLA Note3|20190416Q|20170608S|20180322D|20190325D|20190718Q)(?:[);/ ]|$)'
+  regex: '(LA2-(?:L|S[N]?)|HLA Note3|L7620DE|20190416Q|20170608S|20180322D|20190325D|20190718Q)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'HLA Note3(?:[);/ ]|$)'
       model: 'Red Pepper Note 3'
     - regex: '(LA2-(?:L|S[N]?))(?:[);/ ]|$)'
       model: '$1'
-    - regex: '(20190416Q)(?:[);/ ]|$)'
+    - regex: '(20190416Q|L7620DE)(?:[);/ ]|$)'
       model: '$1'
     - regex: '20170608S(?:[);/ ]|$)'
       model: 'Red Pepper Plus'
