feat(device) rename model for brand Huawei: Honor P40 to Honor P40 5G (ANA-AN00, ANA-TN00) feat(device) rename model for brand Huawei: Honor P40 to Honor P40 Dual (ANA-NX9) feat(test) move test AGS3-W09 to tablet-6.yml
feat(device) added test Meizu models: 18 Pro, 18
feat(device) added test Vivo model: X21i
feat(device) detect brand Huawei models: Honor V10 (BKL-TL10), Nova 8 Pro 5G (BRQ-AN00),
 Honor P40 4G (ANA-AL00), MatePad 10.4" 5G (BAH3-AN10), C3 9.7" (2020) (BZC-AL00), C3 9.7" (2020) WiFi (BZC-W00),
 Honor Pad X6 (AGR-W09HN), MatePad T10s WiFi (AGS3-W09), MatePad T10s (AGS3-AL00), Honor Pad 6 10.1" (AGS3-AL09HN),
 Enjoy Tablet 2 10.1" WiFi (AGS3-W00D, AGS3-W00E), Honor Pad 6 10.1" WiFi (AGS3-W09HN)
feat(device) detect brand Vivo model: V3 Max

--- a/Tests/fixtures/smartphone-6.yml
+++ b/Tests/fixtures/smartphone-6.yml
@@ -3689,7 +3689,7 @@
   device:
     type: smartphone
     brand: Huawei
-    model: Honor P40
+    model: Honor P40 5G
   os_family: Android
   browser_family: Chrome
 - 
@@ -3707,7 +3707,7 @@
   device:
     type: smartphone
     brand: Huawei
-    model: Honor P40
+    model: Honor P40 5G
   os_family: Android
   browser_family: Chrome
 - 
