--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -3301,7 +3301,7 @@
   device:
     type: smartphone
     brand: Huawei
-    model: Honor P40
+    model: Honor P40 Dual
   os_family: Android
   browser_family: Chrome
 -
