--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -3598,3 +3598,183 @@
     model: Galaxy Tab 4 10.1" WiFi
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Android.Thunder.Mozilla/5.0 (Linux; Android 10; BAH3-AN10 Build/HUAWEIBAH3-AN10; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/83.0.4103.106 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad 10.4" 5G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; BZC-AL00; HMSCore 6.1.0.313) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.5.310 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.5.310
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: C3 9.7" (2020)
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; BZC-W00; HMSCore 6.1.0.305) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.4.301 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.4.301
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: C3 9.7" (2020) WiFi
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; AGR-W09HN; HMSCore 6.1.0.313) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.5.310 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.5.310
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: Honor Pad X6
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; AGS3-W09; HMSCore 5.2.0.324) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 HuaweiBrowser/11.0.6.305 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.0.6.305
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad T10s WiFi
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; AGS3-AL00; HMSCore 6.1.0.313) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.5.310 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.5.310
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: MatePad T10s
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; AGS3-AL09HN; HMSCore 6.1.0.313) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.5.310 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.5.310
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: Honor Pad 6 10.1"
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; AGS3-W00D; HMSCore 6.1.0.313) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.5.310 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.5.310
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: Enjoy Tablet 2 10.1" WiFi
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; AGS3-W00E; HMSCore 6.1.0.313) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.5.301 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.5.301
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: Enjoy Tablet 2 10.1" WiFi
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; AGS3-W09HN; HMSCore 6.1.0.313) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/88.0.4324.93 HuaweiBrowser/11.1.5.310 Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Huawei Browser
+    version: 11.1.5.310
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tablet
+    brand: Huawei
+    model: Honor Pad 6 10.1" WiFi
+  os_family: Android
+  browser_family: Unknown
