--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3318,6 +3318,8 @@ Vivo:
       model: 'V9 Youth'
     - regex: 'vivo 1851(?:[);/ ]|$)'
       model: 'V9 Pro'
+    - regex: 'vivo V3Max(?: [AL])?(?:[);/ ]|$)'
+      model: 'V3 Max'
     - regex: 'vivo X5Pro(?:[);/ ]|$)'
       model: 'X5 Pro'
     - regex: 'vivo 1721(?:[);/ ]|$)'
@@ -7122,7 +7124,7 @@ Minix:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei(?!Browser)|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANA|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|FRL|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JEF|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PPA|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|YOK-AN00|NIC-LX1A|MRX-(AL09|W09)|CDY-(?:[AT]N00|AN[29][05]|NX9[AB]|TN90)|GLK-(?:[AT]L00|LX1U)|JER-(?:AN20|[AT]N10)|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL[02]0|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?|L28)|MED-(?:[AT]L00|LX9N?)|EBG-(?:AN[01]0|TN00)|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-[AT]N00|JKM-AL00[ab]|TAH-(?:N29|AN00)m|C8817D|T1-821W|d-01[JK]|d-02[HK]|KRJ-W09|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|NOH-(?:NX9|AN00)|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-[LW]09|AGS3-[WL]09|DNN-LX9|NEY-NX9|LON-AL00|HLK-L41|503HW|AGR-[LW]09|PPA-LX[12]|ANG-(?:AN00|LX1)|NOP-AN00|ALA-AN70|DVC-[AT]N20|302HW|Nexus 6P|DBY-W09|WKG-LX9|JSC-AN00|OCE-AN10|NZA-AL00|BRQ-AL00'
+  regex: '(HW-)?(?:Huawei(?!Browser)|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANA|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|FRL|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JEF|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PPA|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))(?:[);/ ]|$))|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|YOK-AN00|NIC-LX1A|MRX-(AL09|W09)|CDY-(?:[AT]N00|AN[29][05]|NX9[AB]|TN90)|GLK-(?:[AT]L00|LX1U)|JER-(?:AN20|[AT]N10)|ELS-(?:[AT]N[10]0|NX9|N39|N04)|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL[02]0|LX9N)|NTS-AL00|ART-(?:[AT]L00[xm]|L29N?|L28)|MED-(?:[AT]L00|LX9N?)|EBG-(?:AN[01]0|TN00)|ANA-(?:[AT]N00|NX9)|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-[AT]N(?:00a?|10)|KKG-AN00|MXW-[AT]N00|JKM-AL00[ab]|TAH-(?:N29|AN00)m|C8817D|T1-821W|d-01[JK]|d-02[HK]|KRJ-W09|HWT31|Y320-U10|Y541-U02|VAT-L19|70[14]HW|60[58]HW|NOH-(?:NX9|AN00)|TNNH-AN00|LIO-(?:[TA]L00|[LN]29|AN00)|KOB2-[LW]09|AGS3-(?:[WL]09|AL0[09]|W00[DE])|DNN-LX9|NEY-NX9|LON-AL00|HLK-L41|503HW|AGR-[LW]09|PPA-LX[12]|ANG-(?:AN00|LX1)|NOP-AN00|ALA-AN70|DVC-[AT]N20|302HW|Nexus 6P|DBY-W09|WKG-LX9|JSC-AN00|OCE-AN10|NZA-AL00|BRQ-A[LN]00|BZC-(?:AL|W)00'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a(?:[);/ ]|$)'
@@ -7349,8 +7351,12 @@ Huawei:
       model: 'Honor P10 Plus'
     - regex: 'VOG-AL00(?:[);/ ]|$)'
       model: 'Honor P30 Pro'
-    - regex: 'ANA-(?:[AT]N00|NX9)(?:[);/ ]|$)'
-      model: 'Honor P40'
+    - regex: 'ANA-(?:[AT]N00)(?:[);/ ]|$)'
+      model: 'Honor P40 5G'
+    - regex: 'ANA-AL00(?:[);/ ]|$)'
+      model: 'Honor P40 4G'
+    - regex: 'ANA-NX9(?:[);/ ]|$)'
+      model: 'Honor P40 Dual'
     - regex: 'COR-(?:AL[01]0|L29|TL10)(?:[);/ ]|$)'
       model: 'Honor Play'
     - regex: 'ASK-AL(00x|20)(?:[);/ ]|$)'
@@ -7523,6 +7529,8 @@ Huawei:
       model: 'Nova 8 SE 5G'
     - regex: 'BRQ-AL00(?:[);/ ]|$)'
       model: 'Nova 8 Pro 4G'
+    - regex: 'BRQ-AN00(?:[);/ ]|$)'
+      model: 'Nova 8 Pro 5G'
     - regex: 'DIG-L01(?:[);/ ]|$)'
       model: 'Nova Smart'
     - regex: 'WAS-AL00(?:[);/ ]|$)'
@@ -7697,11 +7705,17 @@ Huawei:
     - regex: 'BAH3-W59(?:[);/ ]|$)'
       model: 'MatePad 10.4" WiFi'
       device: 'tablet'
+    - regex: 'BAH3-AN10(?:[);/ ]|$)'
+      model: 'MatePad 10.4" 5G'
+      device: 'tablet'
     - regex: 'DBY-W09(?:[);/ ]|$)'
       model: 'MatePad 11 WiFi'
       device: 'tablet'
-    - regex: 'AGS3-[WL]09(?:[);/ ]|$)'
+    - regex: 'AGS3-(L09|AL00)(?:[);/ ]|$)'
       model: 'MatePad T10s'
+      device: 'tablet'
+    - regex: 'AGS3-W09(?:[);/ ]|$)'
+      model: 'MatePad T10s WiFi'
       device: 'tablet'
     - regex: 'HDL-(?:W09|AL09)(?:[);/ ]|$)'
       model: 'Honor Water Play 8.0'
@@ -7712,12 +7726,27 @@ Huawei:
     - regex: 'KRJ-W09(?:[);/ ]|$)'
       model: 'Honor Pad V6'
       device: 'tablet'
+    - regex: 'AGR-W09HN(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Honor Pad X6'
+    - regex: 'AGS3-AL09HN(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Honor Pad 6 10.1"'
+    - regex: 'AGS3-W09HN(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Honor Pad 6 10.1" WiFi'
     - regex: 'MON-(W|AL)19(?:[);/ ]|$)'
       device: 'tablet'
       model: 'MatePad C5 8'
     - regex: 'BZA-W00(?:[);/ ]|$)'
       device: 'tablet'
       model: 'C3 9.6'
+    - regex: 'BZC-AL00(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'C3 9.7" (2020)'
+    - regex: 'BZC-W00(?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'C3 9.7" (2020) WiFi'
     - regex: 'M2-801L(?:[);/ ]|$)'
       device: 'tablet'
       model: 'MediaPad M2 8.0"'
@@ -7805,6 +7834,9 @@ Huawei:
     - regex: 'AGS2-AL00(?:[);/ ]|$)'
       device: 'tablet'
       model: 'Enjoy Tablet 10.1'
+    - regex: 'AGS3-W00[DE](?:[);/ ]|$)'
+      device: 'tablet'
+      model: 'Enjoy Tablet 2 10.1" WiFi'
     - regex: 'BZT-(W09|AL[01]0)(?:[);/ ]|$)'
       device: 'tablet'
       model: 'MediaPad C5 10.1'
