feat(device) detect brand Vivo models: X21 UD (X21UD A, X21UD), X9i, X9s (X9s L),  X9s Plus (X9s Plus L), X Play 6, Y71 (Y71A), Y75s, Y83 (Y83A), Y85 (Y85A), X21A (X21) feat(device) detect brand Blu model: Vivo Go

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2887,7 +2887,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|GRAND (?:M3|Max|5.5 HD|XL LTE|Mini)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL[234]| Plus|8L|XI[+]?)|C5L 2020|C6 2020)(?:[);/ ]|$)'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|GRAND (?:M3|Max|5.5 HD|XL LTE|Mini)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL[234]| Plus|8L|XI[+]?|GO)|C5L 2020|C6 2020)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
@@ -2992,6 +2992,8 @@ Blu:
       model: 'Vivo $1 Plus'
     - regex: '(?:BLU[_ ])?Vivo (5R|XI|XL[42]|8L)'
       model: 'Vivo $1'
+    - regex: '(?:BLU[_ ])?VIVO GO'
+      model: 'Vivo Go'
 
     - regex: 'Touchbook M7 Pro'
       model: 'Touchbook M7 Pro'
@@ -3320,16 +3322,22 @@ Vivo:
       model: 'V9 Pro'
     - regex: 'vivo V3Max(?: [AL])?(?:[);/ ]|$)'
       model: 'V3 Max'
+    - regex: 'vivo X9s Plus(?:[);/ ]|$)'
+      model: 'X9s Plus'
+    - regex: 'vivo X9s(?: [AL])?(?:[);/ ]|$)'
+      model: 'X9s'
     - regex: 'vivo X5Pro(?:[);/ ]|$)'
       model: 'X5 Pro'
     - regex: 'vivo 1721(?:[);/ ]|$)'
       model: 'X20'
     - regex: '(?:X20Plus(?: a)?|vivo 1720)(?:[);/ ]|$)'
       model: 'X20 Plus'
-    - regex: 'vivo 1725(?:[);/ ]|$)'
-      model: 'X21'
     - regex: 'vivo X21i(?: A)?(?:[);/ ]|$)'
       model: 'X21i'
+    - regex: 'vivo X21UD(?: A)?(?:[);/ ]|$)'
+      model: 'X21 UD'
+    - regex: 'vivo (?:1725|X21A?)(?:[);/ ]|$)'
+      model: 'X21'
     - regex: 'V1814[AT](?:[);/ ]|$)'
       model: 'X21S'
     - regex: 'V1809[AT](?:[);/ ]|$)'
@@ -3358,6 +3366,8 @@ Vivo:
       model: 'X60 Pro Plus'
     - regex: 'X9Plus(?:[);/ ]|$)'
       model: 'X9 Plus'
+    - regex: 'vivo Xplay6(?:[);/ ]|$)'
+      model: 'X Play 6'
     - regex: 'vivo 2015(?:[);/ ]|$)'
       model: 'Y1s'
     - regex: 'vivo 1902(?:[);/ ]|$)'
@@ -3434,7 +3444,7 @@ Vivo:
       model: 'Y70s'
     - regex: 'V2006(?:[);/ ]|$)'
       model: 'Y60s'
-    - regex: 'vivo 1724(?:[);/ ]|$)'
+    - regex: 'vivo (?:1724|Y71A?)(?:[);/ ]|$)'
       model: 'Y71'
     - regex: 'vivo 1801(?:[);/ ]|$)'
       model: 'Y71i'
@@ -3450,6 +3460,8 @@ Vivo:
       model: 'Y81i'
     - regex: 'V1732[AT](?:[);/ ]|$)'
       model: 'Y81s'
+    - regex: 'vivo Y83A?(?:[);/ ]|$)'
+      model: 'Y83'
     - regex: 'vivo 1726(?:[);/ ]|$)'
       model: 'Y83 Pro'
     - regex: 'V1730EA(?:[);/ ]|$)'
@@ -3494,6 +3506,10 @@ Vivo:
       model: 'Z5x (2020)'
     - regex: 'V1963A(?:[);/ ]|$)'
       model: 'Z6'
+    - regex: 'vivo Y75s(?:[);/ ]|$)'
+      model: 'Y75s'
+    - regex: 'vivo Y85A?(?:[);/ ]|$)'
+      model: 'Y85'
 
     - regex: '(?:VIV-|BBG-)?vivo[ _]([^/;]+) Build'
       model: '$1'
