feat(device) detect brand Vivo models: X50 5G (2005)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3354,6 +3354,8 @@ Vivo:
       model: 'X30 Pro'
     - regex: '(?:V2001A|vivo 2004)(?:[);/ ]|$)'
       model: 'X50'
+    - regex: 'vivo 2005(?:[);/ ]|$)'
+      model: 'X50 5G'
     - regex: '(?:V2005A|vivo 2006)(?:[);/ ]|$)'
       model: 'X50 Pro'
     - regex: '(?:V2011A|X50 Pro\+)(?:[);/ ]|$)'
