Adds detection for Apple iPhone 13 models

--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9840,3 +9840,67 @@
     model: "9"
   os_family: Android
   browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 15_0 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148 Instagram 207.0.0.28.118 (iPhone14,2; iOS 15_0; ru_RU; ru; scale=3.00; 1170x2532; 320361397) NW/3
+  os:
+    name: iOS
+    version: "15.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 207.0.0.28.118
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone 13 Pro
+  os_family: iOS
+  browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 15_0 like Mac OS X) WebKit/8612 (KHTML, like Gecko) Mobile/19A346 [FBAN/FBIOS;FBDV/iPhone14,3;FBMD/iPhone;FBSN/iOS;FBSV/15.0;FBSS/3;FBID/phone;FBLC/it_IT;FBOP/5]
+  os:
+    name: iOS
+    version: "15.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: ""
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone 13 Pro Max
+  os_family: iOS
+  browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 15_0 like Mac OS X) WebKit/8612 (KHTML, like Gecko) Mobile/19A341 [FBAN/FBIOS;FBDV/iPhone14,4;FBMD/iPhone;FBSN/iOS;FBSV/15.0;FBSS/3;FBID/phone;FBLC/ru_RU;FBOP/5]
+  os:
+    name: iOS
+    version: "15.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: ""
+  device:
+    type: smartphone
+    brand: Apple
+    model: iPhone 13 Mini
+  os_family: iOS
+  browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 15_0 like Mac OS X) WebKit/8612 (KHTML, like Gecko) Mobile/19A346 [FBAN/FBIOS;FBDV/iPhone14,5;FBMD/iPhone;FBSN/iOS;FBSV/15.0;FBSS/3;FBID/phone;FBLC/it_IT;FBOP/5]
+  os:
+    name: iOS
+    version: "15.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: ""
+  device:
+    type: phablet
+    brand: Apple
+    model: iPhone 13
+  os_family: iOS
+  browser_family: Unknown
