--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -969,6 +969,18 @@ Apple:
     - regex: '(?:Apple-|.+_)?iPh(?:one)?13[C,_][4]'
       model: 'iPhone 12 Pro Max'
       device: 'phablet'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_][2]'
+      model: 'iPhone 13 Pro'
+      device: 'phablet'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_][3]'
+      model: 'iPhone 13 Pro Max'
+      device: 'phablet'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_][4]'
+      model: 'iPhone 13 Mini'
+      device: 'smartphone'
+    - regex: '(?:Apple-|.+_)?iPh(?:one)?14[C,_][5]'
+      model: 'iPhone 13'
+      device: 'phablet'
 
     # specific tablet devices
     - regex: '(?:Apple-|.+_)?iPad1[C,_]1'
