--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -97,7 +97,7 @@ HTC:
       model: 'U Ultra'
     - regex: 'HTC[_ ](?:U-2u|U Play|2PZM3)(?:[);/ ]|$)'
       model: 'U Play'
-    - regex: '(?:U11 plus|(?:HTC_)?2Q4D100)(?:[);/ ]|$)'
+    - regex: '(?:U11 plus|(?:HTC_)?2Q4D[12]00)(?:[);/ ]|$)'
       model: 'U11 Plus'
     - regex: 'HTC (?:U12\+|2Q55[13]00)(?:[);/ ]|$)'
       model: 'U12 Plus'
@@ -111,7 +111,7 @@ HTC:
       model: 'Evo 3G'
     - regex: 'PC36100(?:[);/ ]|$)'
       model: 'Evo 4G'
-    - regex: '(?:HTC[_ ])?(?:HTV33|601HT|2PZC100|2PZC5|U-3u)(?:[);/ ]|$)'
+    - regex: '(?:HTC[_ ])?(?:HTV33|601HT|2PZC100|2PZC5|U-3[uw])(?:[);/ ]|$)'
       model: 'U11'
     - regex: '(?:801e|802[wdt])'
       model: 'One'
@@ -6991,7 +6991,7 @@ Hasee:
 
 # Hisense ()
 Hisense:
-  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HISENSE; |HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|E270BSA|HWCD100E|HITV300C|M470BS[AE]|EG98|E2281|EG680|I46D1G|HAT4KDTV|HLTE([237]00T|200M|203T|202N|21[023567]T|22[67]T|22[13]E|230E|310[TM]|31[16]T|500T|501N|510[TM]|7[23]0T)'
+  regex: '(?:HS-)?Hisense ([^;/]+) Build|Hisense [^);/]+|HISENSE; |HS-(?:G|U|EG?|I|L|T|X)[0-9]+[a-z0-9\-]*|HNR55[01]T|E270BSA|HWCD100E|HITV300C|M470BS[AE]|EG98|E2281|EG680|I46D1G|HAT4KDTV|HLTE([237]00T|200M|203T|202N|21[023567][TM]|22[67]T|22[13]E|230E|310[TM]|31[16]T|500T|501N|510[TM]|7[23]0T)'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -7034,7 +7034,7 @@ Hisense:
       model: 'King Kong 4'
     - regex: 'HLTE311T(?:[);/ ]|$)'
       model: 'King Kong 4 Pro'
-    - regex: 'HLTE216T(?:[);/ ]|$)'
+    - regex: 'HLTE216[TM](?:[);/ ]|$)'
       model: 'King Kong 5'
     - regex: 'HLTE316T(?:[);/ ]|$)'
       model: 'King Kong 5 Pro'
@@ -7044,6 +7044,10 @@ Hisense:
       model: 'F30S'
     - regex: 'HLTE227T(?:[);/ ]|$)'
       model: 'F40'
+    - regex: 'HNR550T(?:[);/ ]|$)'
+      model: 'F50'
+    - regex: 'HNR551T(?:[);/ ]|$)'
+      model: 'F50 Plus'
     - regex: 'HLTE310[TM](?:[);/ ]|$)'
       model: 'H18'
     - regex: 'HLTE510[TM](?:[);/ ]|$)'
