feat(device) detect brand Gionee model: M11 (20190620G)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6617,7 +6617,7 @@ Ginzzu:
 
 # Gionee
 Gionee:
-  regex: '(?:GIO-)?GIONEE[ _-]?[a-z0-9]+|(?:Dream_D1|V188S?|GN[0-9]{3,4}[a-z]?)(?:[);/ ]|$)|F103(?: Pro)?(?: Build|\))|P5 mini Build|P7 Max Build|(M7 Power|F106L|F100A|F103S|F103 Pro|M6 mirror)(?:[);/ ]|$)'
+  regex: '(?:GIO-)?GIONEE[ _-]?[a-z0-9]+|(?:Dream_D1|V188S?|GN[0-9]{3,4}[a-z]?)(?:[);/ ]|$)|F103(?: Pro)?(?: Build|\))|P5 mini Build|P7 Max Build|(M7 Power|F106L|F100A|F103S|F103 Pro|M6 mirror|20190620G)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'GN810(?:[);/ ]|$)'
@@ -6629,6 +6629,8 @@ Gionee:
       model: '$1'
     - regex: 'M7 Power(?:[);/ ]|$)'
       model: 'M7 Power'
+    - regex: '20190620G(?:[);/ ]|$)'
+      model: 'M11'
     - regex: 'P5 mini Build'
       model: 'P5 mini'
     - regex: 'P7 Max Build'
