--- a/Tests/fixtures/smartphone-27.yml
+++ b/Tests/fixtures/smartphone-27.yml
@@ -1905,3 +1905,21 @@
     model: King Kong 5
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; 20190620G Build/O11019; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/76.0.3809.89 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 76.0.3809.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Gionee
+    model: M11
+  os_family: Android
+  browser_family: Chrome
