feat(device) detect brand Galaxy A32 model: Galaxy A32 (SM-A325N)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14950,7 +14950,7 @@ Samsung:
       model: 'Galaxy A30s'
     - regex: '(?:SAMSUNG-)?SM-A315[FGN](?:[);/ ]|$)'
       model: 'Galaxy A31'
-    - regex: '(?:SAMSUNG-)?SM-A325F(?:[);/ ]|$)'
+    - regex: '(?:SAMSUNG-)?SM-A325'
       model: 'Galaxy A32'
     - regex: '(?:SAMSUNG-)?(?:SM-A326(?:BR|B)|SCG08)'
       model: 'Galaxy A32 5G'
