--- a/Tests/fixtures/smartphone-27.yml
+++ b/Tests/fixtures/smartphone-27.yml
@@ -1977,3 +1977,21 @@
     model: Mate 40 Pro
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 11; SM-A325N Build/RP1A.200720.012)
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Samsung
+    model: Galaxy A32
+  os_family: Android
+  browser_family: Android Browser
