feat(device) detect brand Vivo models: X6 Plus, X7 Plus, X50 Lite (1937), Y25 (1613), Y51 (2015) (1707),  X5, X5 Pro, Y613, Y66i, Y79, X9 Plus

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3379,6 +3379,8 @@ Vivo:
       model: 'X50'
     - regex: 'vivo 2005(?:[);/ ]|$)'
       model: 'X50 5G'
+    - regex: 'vivo 1937(?:[);/ ]|$)'
+      model: 'X50 Lite'
     - regex: '(?:V2005A|vivo 2006)(?:[);/ ]|$)'
       model: 'X50 Pro'
     - regex: '(?:V2011A|X50 Pro\+)(?:[);/ ]|$)'
@@ -3395,8 +3397,8 @@ Vivo:
       model: 'X70 Pro'
     - regex: 'V2133A(?:[);/ ]|$)'
       model: 'X70'
-    - regex: 'X9Plus(?:[);/ ]|$)'
-      model: 'X9 Plus'
+    - regex: 'X([0-9])Plus(?: A)?(?:[);/ ]|$)'
+      model: 'X$1 Plus'
     - regex: 'vivo Xplay6(?:[);/ ]|$)'
       model: 'X Play 6'
     - regex: 'vivo 2015(?:[);/ ]|$)'
@@ -3413,6 +3415,8 @@ Vivo:
       model: 'Y19'
     - regex: 'V202[79](?:[);/ ]|$)'
       model: 'Y20'
+    - regex: 'vivo 1613(?:[);/ ]|$)'
+      model: 'Y25'
     - regex: 'V2043_21(?:[);/ ]|$)'
       model: 'Y20 (2021)'
     - regex: 'V2037(?:[);/ ]|$)'
@@ -3451,6 +3455,8 @@ Vivo:
       model: 'Y50'
     - regex: 'V203[05](?:[);/ ]|$)'
       model: 'Y51'
+    - regex: 'vivo 1707(?:[);/ ]|$)'
+      model: 'Y51 (2015)'
     - regex: 'V2031(?:[);/ ]|$)'
       model: 'Y51s'
     - regex: 'V2054A(?:[);/ ]|$)'
@@ -3541,6 +3547,14 @@ Vivo:
       model: 'Y75s'
     - regex: 'vivo Y85A?(?:[);/ ]|$)'
       model: 'Y85'
+    - regex: 'vivo X5L?(?:[);/ ]|$)'
+      model: 'X5'
+    - regex: 'vivo X5Pro(?: L)?(?:[);/ ]|$)'
+      model: 'X5 Pro'
+    - regex: 'vivo Y66i(?: A)?(?:[);/ ]|$)'
+      model: 'Y66i'
+    - regex: 'vivo Y79A?(?:[);/ ]|$)'
+      model: 'Y79'
 
     - regex: '(?:VIV-|BBG-)?vivo[ _]([^/;]+) Build'
       model: '$1'
