feat(device) detect brand Vivo models: Y71i (1801i), Y83 (1802),  Y81i (1812_19), Y91i (1820_19), V7 Plus (1850), Y1s (2015_21), Y75,  X6, X20, X21

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3335,7 +3335,7 @@ Vivo:
       model: 'V5s'
     - regex: 'vivo 1718(?:[);/ ]|$)'
       model: 'V7'
-    - regex: 'vivo 1716(?:[);/ ]|$)'
+    - regex: 'vivo (?:1716|1850)(?:[);/ ]|$)'
       model: 'V7 Plus'
     - regex: 'vivo 1723(?:[);/ ]|$)'
       model: 'V9'
@@ -3401,7 +3401,7 @@ Vivo:
       model: 'X$1 Plus'
     - regex: 'vivo Xplay6(?:[);/ ]|$)'
       model: 'X Play 6'
-    - regex: 'vivo 2015(?:[);/ ]|$)'
+    - regex: 'vivo 2015(?:_21)?(?:[);/ ]|$)'
       model: 'Y1s'
     - regex: 'vivo 1902(?:[);/ ]|$)'
       model: 'Y17'
@@ -3483,7 +3483,7 @@ Vivo:
       model: 'Y60s'
     - regex: 'vivo (?:1724|Y71A?)(?:[);/ ]|$)'
       model: 'Y71'
-    - regex: 'vivo 1801(?:[);/ ]|$)'
+    - regex: 'vivo 1801i?(?:[);/ ]|$)'
       model: 'Y71i'
     - regex: 'V1731CA(?:[);/ ]|$)'
       model: 'Y73'
@@ -3493,11 +3493,11 @@ Vivo:
       model: 'Y7s'
     - regex: 'vivo 180([38]|8i)(?:[);/ ]|$)'
       model: 'Y81'
-    - regex: 'vivo 1812(?:[);/ ]|$)'
+    - regex: 'vivo 1812(?:_19)?(?:[);/ ]|$)'
       model: 'Y81i'
     - regex: 'V1732[AT](?:[);/ ]|$)'
       model: 'Y81s'
-    - regex: 'vivo Y83A?(?:[);/ ]|$)'
+    - regex: 'vivo (?:Y83A?|1802)(?:[);/ ]|$)'
       model: 'Y83'
     - regex: 'vivo 1726(?:[);/ ]|$)'
       model: 'Y83 Pro'
@@ -3507,6 +3507,8 @@ Vivo:
       model: 'Y90'
     - regex: 'vivo 181[17](?:[);/ ]|$)'
       model: 'Y91'
+    - regex: 'vivo 1820(?:_19)?(?:[);/ ]|$)'
+      model: 'Y91i'
     - regex: 'V1945A(?:[);/ ]|$)'
       model: 'Y9s'
     - regex: '(?:V2026|V2033)(?:[);/ ]|$)'
@@ -3545,10 +3547,12 @@ Vivo:
       model: 'Z6'
     - regex: 'vivo Y75s(?:[);/ ]|$)'
       model: 'Y75s'
+    - regex: 'vivo Y75A?(?:[);/ ]|$)'
+      model: 'Y75'
     - regex: 'vivo Y85A?(?:[);/ ]|$)'
       model: 'Y85'
-    - regex: 'vivo X5L?(?:[);/ ]|$)'
-      model: 'X5'
+    - regex: 'vivo X([56]|20)[AL]?(?:[);/ ]|$)'
+      model: 'X$1'
     - regex: 'vivo X5Pro(?: L)?(?:[);/ ]|$)'
       model: 'X5 Pro'
     - regex: 'vivo Y66i(?: A)?(?:[);/ ]|$)'
