feat(device) detect brand Vivo models: X6, X6S Plus, Y21, Y51, X6 Plus, Y11 (1906_20), Y27, Y23, Y12i (2007), X Play 5, X7, Y31 feat(device) detect brand Blu model: Vivo XL3

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3005,7 +3005,7 @@ Blu:
       model: 'Vivo One Plus (2019)'
     - regex: '(?:BLU[_ ])?Vivo (One|XL3|XI)(?: Plus|[+])'
       model: 'Vivo $1 Plus'
-    - regex: '(?:BLU[_ ])?Vivo (5R|XI|XL[42]|8L)'
+    - regex: '(?:BLU[_ ])?Vivo (5R|XI|XL[234]|8L)'
       model: 'Vivo $1'
     - regex: '(?:BLU[_ ])?VIVO GO'
       model: 'Vivo Go'
@@ -3405,10 +3405,12 @@ Vivo:
       model: 'Y1s'
     - regex: 'vivo 1902(?:[);/ ]|$)'
       model: 'Y17'
-    - regex: 'vivo 1906(?:[);/ ]|$)'
+    - regex: 'vivo 1906(?:_20)?(?:[);/ ]|$)'
       model: 'Y11'
     - regex: 'vivo 19(?:04|40)(?:[);/ ]|$)'
       model: 'Y12'
+    - regex: 'vivo 2007(?:[);/ ]|$)'
+      model: 'Y12i'
     - regex: 'vivo 1901(?:[);/ ]|$)'
       model: 'Y15'
     - regex: 'vivo 1915(?:[);/ ]|$)'
@@ -3549,7 +3551,11 @@ Vivo:
       model: 'Y75s'
     - regex: 'vivo X710L?(?:[);/ ]|$)'
       model: 'X Shot'
-    - regex: 'vivo X([569]|20)[AL]?(?:[);/ ]|$)'
+    - regex: 'X6SPlus(?: [AD])?(?:[);/ ]|$)'
+      model: 'X6S Plus'
+    - regex: 'vivo X6S(?: A)?(?:[);/ ]|$)'
+      model: 'X6S'
+    - regex: 'vivo X([5679]|20)[ALD]?(?:[);/ ]|$)'
       model: 'X$1'
     - regex: 'vivo X5Pro(?: L)?(?:[);/ ]|$)'
       model: 'X5 Pro'
