feat(device) detect brand Vivo models: Y66, Nex Dual Display (1813), Y55, Y51, Y37

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3277,7 +3277,7 @@ Vivo:
       model: 'Nex A'
     - regex: 'vivo NEX(?:[);/ ]|$)'
       model: 'Nex'
-    - regex: 'V1821[AT](?:[);/ ]|$)'
+    - regex: '(?:V1821[AT]|vivo 1813)(?:[);/ ]|$)'
       model: 'Nex Dual Display'
     - regex: 'Vivo ONE(?:[);/ ]|$)'
       model: 'One'
